yoooooo another random player

--- a/gamemodel.properties
+++ b/gamemodel.properties
@@ -18,7 +18,7 @@ M		: 500
 # Food Limit
 K		: 80
 
-CLASS_LIST	: organisms.g0.RandomPlayer
+CLASS_LIST	: organisms.g0.RandomPlayer, organisms.g0.RandomPlayer2
 PLAYER_LIST	: organisms.g0.RandomPlayer
 
 
