--- a/gamemodel.properties
+++ b/gamemodel.properties
@@ -18,8 +18,8 @@ M		: 500
 # Food Limit
 K		: 80
 
-CLASS_LIST	: organisms.g0.RandomPlayer organisms.g4.Group4FirstOrganismPlayer
-PLAYER_LIST	: organisms.g0.RandomPlayer organisms.g4.Group4FirstOrganismPlayer
+CLASS_LIST	: organisms.g0.RandomPlayer organisms.g4.SimplePlayer
+PLAYER_LIST	: organisms.g0.RandomPlayer organisms.g4.SimplePlayer
 
 
 
