--- a/gamemodel.properties
+++ b/gamemodel.properties
@@ -18,8 +18,8 @@ M		: 500
 # Food Limit
 K		: 80
 
-CLASS_LIST	: organisms.g0.RandomPlayer organisms.g4.SimplePlayer
-PLAYER_LIST	: organisms.g0.RandomPlayer organisms.g4.SimplePlayer
+CLASS_LIST	: organisms.g0.RandomPlayer organisms.g4.SimplePlayer organisms.g4.KnowledgePlayer
+PLAYER_LIST	: organisms.g0.RandomPlayer organisms.g4.SimplePlayer organisms.g4.KnowledgePlayer
 
 
 
