adjusted soloplayer for longer runs

--- a/gamemodel.properties
+++ b/gamemodel.properties
@@ -18,8 +18,8 @@ M		: 500
 # Food Limit
 K		: 80
 
-CLASS_LIST	: organisms.g4.GroupingPlayer organisms.g4.HeuristicPlayer organisms.g1.AggressivePlayer organisms.g3.Group3Player
-PLAYER_LIST	: organisms.g4.GroupingPlayer organisms.g4.HeuristicPlayer organisms.g1.AggressivePlayer organisms.g3.Group3Player
+CLASS_LIST	: organisms.g4.FusedPlayer organisms.g4.GroupingPlayer organisms.g4.SoloPlayer organisms.g4.HeuristicPlayer organisms.g1.AggressivePlayer organisms.g3.Group3Player
+PLAYER_LIST	: organisms.g4.FusedPlayer organisms.g4.GroupingPlayer organisms.g4.SoloPlayer organisms.g4.HeuristicPlayer organisms.g1.AggressivePlayer organisms.g3.Group3Player
 
 
 
